Update of cORS